--- a/index-backup.html
+++ b/index-backup.html
@@ -71,16 +71,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="service.html">Service</a></li>
-                    <li><a href="plans.html">Hosting</a></li>
+                    <li><a href="plans.html">Hosting Plans</a></li>
                     <li><a href="domain.html">Domain</a></li>
                     <li><a href="webmail.html">WebMail</a></li>
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Store<span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                        <li><a class="droplink" href="store.html">Detail</a></li>
-                        <li><a class="droplink" href="theme.html">Theme</a></li>
-                      </ul>
-                    </li>
+                    <li><a href="store.html">Store</a></li>
                     <li><a href="promo.html">Promo</a></li>
                     <li><a href="reseller.html">Reseller</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
@@ -99,7 +93,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                <div class="flexslider">
                     <ul class="slides">
                         <li>
-                            <img src="images/serv" class="img-responsive" alt=""/>
+                            <img src="images/servers.png" class="img-responsive" alt=""/>
+                            <div class="banner_desc">
+                                <h1>Awesome Hosting</h1>
+                                <h2>with unlimited features</h2>
+                            </div>
                         </li>
                         <li>
                             <img src="images/server.png" class="img-responsive" alt=""/>
@@ -247,9 +245,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="list_1">
                         <ul>
                           <li><a href="">Unlimited Email.</a></li>
-                          <li><a href="">cPanel Control Panel.</a></li>                           
-                          <li><a href="">LiteSpeed Enterprise.</a></li>      
-                          <li><a href="">SSH, GIT, Addon Domain.</a></li>
+                          <li><a href="">cPanel Control Panel.</a></li>
+                           
+                          <li><a href="">LiteSpeed Enterprise dan Load Balancer.</a></li>      
+                          <li><a href="">SSH, GIT, Composser, Addon Domain.</a></li>
                         </ul>
                     </div>
                 </div>
@@ -258,8 +257,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <ul>
                         <li><a href="">Free Backup Daily.</a></li>  
                           <li><a href="">Website Builder.</a></li>
-                          <li><a href="">Instant Backup, dll.</a></li>
-                          <li><a href="">MySQL, PHPMyAdmin, dll.</a></li>
+                          <li><a href="">File Manager, FTP, Instant Backup, dll.</a></li>
+                          <li><a href="">MySQL, MariaDB, PHPMyAdmin, dll.</a></li>
                            
                         </ul>
                     </div>
@@ -279,14 +278,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </h4>
             <div class="col-md-3">
                 <div class="pricing-table-grid">
-                    <h3><span class="dollar">Rp </span>15<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
+                    <h3><span class="dollar">$</span>5<br><span class="month">Per Month</span></h3>
                     <ul>
                         <li><span>Standard Plan</span></li>
-                        <li><a href="#">500 MB Storage</a></li>
-                        <li><a href="#">256 MB Virtual Memory</a></li>
-                        <li><a href="#">Half Core CPU</a></li>
+                        <li><a href="#">10GB Disk Space</a></li>
+                        <li><a href="#">1TB Bandwidth</a></li>
+                        <li><a href="#">Free DDoS Protection</a></li>
+                        <li><a href="#">Free Daily Backups</a></li>
                         <li><a href="#">Managed Hosting</a></li>
-                        <li><a href="#">Unlimited Bandwidth</a></li>
                     </ul>
                     <a class="popup-with-zoom-anim order-btn" href="#small-dialog">Order</a>
                 </div>
@@ -349,42 +348,42 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
              </div>
              <div class="col-md-3">
                 <div class="pricing-table-grid">
-                    <h3><span class="dollar">Rp </span>100<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
+                    <h3><span class="dollar">$</span>6<br><span class="month">Per Month</span></h3>
                     <ul>
                         <li><span>Advanced Plan</span></li>
-                        <li><a href="#">1 GB Storage</a></li>
-                        <li><a href="#">Indonesia Data Center</a></li>
-                        <li><a href="#">256 MB Virtual Memory</a></li>
-                        <li><a href="#">Single Core CPU</a></li>
-                        <li><a href="#">Unlimited Bandwidth</a></li>
+                        <li><a href="#">10GB Disk Space</a></li>
+                        <li><a href="#">1TB Bandwidth</a></li>
+                        <li><a href="#">Free DDoS Protection</a></li>
+                        <li><a href="#">Free Daily Backups</a></li>
+                        <li><a href="#">Managed Hosting</a></li>
                     </ul>
                     <a class="popup-with-zoom-anim order-btn" href="#small-dialog">Order</a>
                 </div>
              </div>	
              <div class="col-md-3">
                 <div class="pricing-table-grid">
-                    <h3><span class="dollar">Rp </span>400<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
+                    <h3><span class="dollar">$</span>8<br><span class="month">Per Month</span></h3>
                     <ul>
                         <li><span>Business Plan</span></li>
-                        <li><a href="#">60 GB Storage</a></li>
-                        <li><a href="#">Free cPanel/WHM</a></li>
-                        <li><a href="#">1024 MB Virtual Memory</a></li>
-                        <li><a href="#">Single Core CPU</a></li>
-                        <li><a href="#">Unlimited Bandwidth</a></li>
+                        <li><a href="#">10GB Disk Space</a></li>
+                        <li><a href="#">1TB Bandwidth</a></li>
+                        <li><a href="#">Free DDoS Protection</a></li>
+                        <li><a href="#">Free Daily Backups</a></li>
+                        <li><a href="#">Managed Hosting</a></li>
                     </ul>
                     <a class="popup-with-zoom-anim order-btn" href="#small-dialog">Order</a>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="pricing-table-grid">
-                    <h3><span class="dollar">Rp </span>1000<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
+                    <h3><span class="dollar">$</span>9<br><span class="month">Per Month</span></h3>
                     <ul>
                         <li><span>Gold Plan</span></li>
-                        <li><a href="#">SATA 2x1 TB Storage</a></li>
-                        <li><a href="#">Indonesia Data Center</a></li>
-                        <li><a href="#">DDR3 16GB Virtual Memory</a></li>
-                        <li><a href="#">3.3 GHZ CPU</a></li>
-                        <li><a href="#">Unlimited Bandwidth</a></li>
+                        <li><a href="#">10GB Disk Space</a></li>
+                        <li><a href="#">1TB Bandwidth</a></li>
+                        <li><a href="#">Free DDoS Protection</a></li>
+                        <li><a href="#">Free Daily Backups</a></li>
+                        <li><a href="#">Managed Hosting</a></li>
                     </ul>
                     <a class="popup-with-zoom-anim order-btn" href="#small-dialog">Order</a>
                 </div>
@@ -469,7 +468,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 });
             });
         </script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
 
