--- a/promo.html
+++ b/promo.html
@@ -93,75 +93,52 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
 <div class="about">
 	 <div class="container">
-		<h1>Support<span class="m_1"><br>Center</span></h1>
+		<h1>Promo<span class="m_1"><br>Saat ini</span></h1>
 	</div>
 </div>
-<div class="support_box">
+<div class="promo-container">
 	<div class="container">
-		<div class="col-md-6">
-		  <h4 class="tz-title-4 tzcolor-blue">
-            <p class="tzweight_Bold"><span class="m_1">Info<br></span>Contact Us</p>
-          </h4>
-          <p class="text1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown printer took.</p>
-		  <div class="contact_address1">
-		  	<div class="col_1_of_2 span_1_of_2 row_5">
-			  	 <h4 class="tz-title-6">
-	              <p><span class="m_21">Address</span></p>
-	             </h4>
-	             <p>But I must explain to you how</p>
-	             <p>25478 charms of pleasur</p>
-	             <p>On the other hand, we denounce</p>	
-		  	</div>
-		  	<div class="col_1_of_2 span_1_of_2 row_5">
-			  	 <h4 class="tz-title-6">
-	              <p><span class="m_21">Email Address</span></p>
-	             </h4>
-	             <p><a href="malito:mail@demolink.org">General : info(at)hosting.com</a></p>
-	             <p><a href="malito:mail@demolink.org">Office : info(at)hosting.com</a></p>
-		  	</div>
-		  	<div class="clearfix"></div>
-		  </div>
-		  <div class="contact_address1">
-		  	<div class="col_1_of_2 span_1_of_2 row_5">
-			  	 <h4 class="tz-title-6">
-	              <p><span class="m_21">Phone</span></p>
-	             </h4>
-	             <p>Landline : 254-8974-5847</p>
-	             <p>Mobile : +874 1478 74755</p>
-	        </div>
-		  	<div class="col_1_of_2 span_1_of_2 row_5">
-			  	 <h4 class="tz-title-6">
-	              <p><span class="m_21">Social Media</span></p>
-	             </h4>
-	             <ul class="contact_social">
-				  <li><a href=""> <i class="fb"> </i> </a></li>
-				  <li><a href=""><i class="tw"> </i> </a></li>
-				  <li><a href=""><i class="google"> </i> </a></li>
-				  <li><a href=""><i class="utube"> </i> </a></li>
-				  <li><a href=""><i class="linkedin"> </i> </a></li>
-		         </ul>
-		  	</div>
-		  	<div class="clearfix"></div>
-		  </div>
-		</div>
-		<div class="col-md-6 contact_right">
-		  <h4 class="tz-title-4 tzcolor-blue">
-            <p class="tzweight_Bold"><span class="m_1">Contact<br></span>Form</p>
-          </h4>
-            <form>
-			   <input type="text" class="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}">
-			   <input type="text" class="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}">
-			   <input type="text" class="text" value="Subject" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Subject';}">
-			   <textarea value="Comment" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Comment</textarea>
-	           <input type="submit" value="Submit">
-			</form>
-		</div>
-		<div class="clearfix"> </div>
+		<div class="testimonial_grid">
+			<h3> Promo Gratis Merchandise</h3>
+	        		<p><span class="quotes1"> </span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make. </p>
+	                <ul class="testi_box">
+	                	<li class="testi_box-left"><img src="images/t2.jpg" class="img-responsive" alt=""/></li>
+	                	<li class="testi_box-right"><h4>By<br><span class="m_13">Lorem Ipsum</span></h4></li>
+	                	<div class="clearfix"> </div>
+	                </ul>        	  
+	        	  </div>
+
+	        	  <div class="testimonial_grid">
+			<h3> Promo Gratis Merchandise</h3>
+	        		<p><span class="quotes1"> </span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make. </p>
+	                <ul class="testi_box">
+	                	<li class="testi_box-left"><img src="images/t2.jpg" class="img-responsive" alt=""/></li>
+	                	<li class="testi_box-right"><h4>By<br><span class="m_13">Lorem Ipsum</span></h4></li>
+	                	<div class="clearfix"> </div>
+	                </ul>        	  
+	        	  </div>
+
+	        	  <div class="testimonial_grid">
+			<h3> Promo Gratis Merchandise</h3>
+	        		<p><span class="quotes1"> </span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make. </p>
+	                <ul class="testi_box">
+	                	<li class="testi_box-left"><img src="images/t2.jpg" class="img-responsive" alt=""/></li>
+	                	<li class="testi_box-right"><h4>By<br><span class="m_13">Lorem Ipsum</span></h4></li>
+	                	<div class="clearfix"> </div>
+	                </ul>        	  
+	        	  </div>
+
+	        	  <div class="testimonial_grid">
+			<h3> Promo Gratis Merchandise</h3>
+	        		<p><span class="quotes1"> </span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make. </p>
+	                <ul class="testi_box">
+	                	<li class="testi_box-left"><img src="images/t2.jpg" class="img-responsive" alt=""/></li>
+	                	<li class="testi_box-right"><h4>By<br><span class="m_13">Lorem Ipsum</span></h4></li>
+	                	<div class="clearfix"> </div>
+	                </ul>        	  
+	        	  </div>
 	</div>
 </div>
-<div class="map">
-	     <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:400px;width:1519.2px;'><div id='gmap_canvas' style='height:400px;width:1519.2px;'></div><div><small><a href="http://embedgooglemaps.com">embed google maps</a></small></div><div><small><a href="https://ultimatewebtraffic.com/">buy targeted traffic</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(-8.007966924706475,112.62449056925311),mapTypeId: google.maps.MapTypeId.TERRAIN};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(-8.007966924706475,112.62449056925311)});infowindow = new google.maps.InfoWindow({content:'<strong>Illiyin.co</strong><br>Perum Puri Nirwana Keben Kav. 7<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
-	    </div>
 
 <div class="footer">
 	<div class="container">
